--- a/examples/dynamic-raw-form-content-example.html
+++ b/examples/dynamic-raw-form-content-example.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>JSDynamicFormContent with single form</title>
+        <title>JSDynamicFormContent with raw form data</title>
     </head>
     <body>
         <form id="form">
