--- a/examples/dynamic-multiple-form-content-example.html
+++ b/examples/dynamic-multiple-form-content-example.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>JSDynamicFormContent with single form</title>
+        <title>JSDynamicFormContent with mutliple forms</title>
     </head>
     <body>
         <h1>Form 1</h1>
