--- a/examples/dynamic-single-form-content-example.html
+++ b/examples/dynamic-single-form-content-example.html
@@ -35,7 +35,7 @@
         </form>
         
         <!--Load dynamic-form-content script-->
-        <script src="../dynamic-form-content.js" type="text/javascript"></script>
+        <script src="https://raw.githubusercontent.com/OliverPaljak/JSDynamicFormContent/master/dynamic-form-content.min.js" type="text/javascript"></script>
         
         <!--Load or inline custom script-->
         <script type="text/javascript">
