--- a/examples/dynamic-raw-form-content-example.html
+++ b/examples/dynamic-raw-form-content-example.html
@@ -32,10 +32,10 @@
             <br />
         </form>
         
-        <!--Load dynamic-form-content script-->
-        <script src="https://raw.githubusercontent.com/OliverPaljak/JSDynamicFormContent/master/dynamic-form-content.min.js" type="text/javascript"></script>
+        <!--Load JSDynamicFormContent script-->
+        <script src="https://raw.githubusercontent.com/OliverPaljak/JSDynamicFormContent/master/dynamic-form-content-prod.min.js" type="text/javascript"></script>
         
-        <!--Load or inline custom script-->
+        <!--Initializing JSDynamicFormContent-->
         <script type="text/javascript">
             /*
             * Example of raw form data (data is displayed in console)
