--- a/examples/dynamic-single-form-content-example.html
+++ b/examples/dynamic-single-form-content-example.html
@@ -34,10 +34,10 @@
             <output id="output"></output>
         </form>
         
-        <!--Load dynamic-form-content script-->
-        <script src="https://raw.githubusercontent.com/OliverPaljak/JSDynamicFormContent/master/dynamic-form-content.min.js" type="text/javascript"></script>
+        <!--Load JSDynamicFormContent script-->
+        <script src="https://raw.githubusercontent.com/OliverPaljak/JSDynamicFormContent/master/dynamic-form-content-prod.min.js" type="text/javascript"></script>
         
-        <!--Load or inline custom script-->
+        <!--Initializing JSDynamicFormContent-->
         <script type="text/javascript">
             var form = document.getElementById("form");
             var inputSelectors = "input, textarea, select";
